# ftoa-benchmark

./: .gitignore  CMakeLists.txt  Cargo.toml  IMPLEMENTATION.md  README.md  benchmark.py  build.rs  build_libs.py  compare-all.sh  compare-zmij-xjb.sh  compare.sh  examples.py  flake.nix  pyproject.toml  result.md  setup.py  test.py  test_input.txt
.claude/skills/asm-diff/: SKILL.md
csrc/: zmij_c.c  zmij_c.h  zmij_cpp.cpp  zmij_cpp.h
src/: any_dtoa_benchmark.c  any_ftoa_benchmark.c  benchmark.c  benchmark.h  lib.rs  main.c  verifier.c  zmij-playground.h
sse4-improve/: zmij.cc
sse4-improve-ctz/: zmij.cc
sse4-improve-ctz-concatenate/: zmij.cc
testdata/: doubles.txt  floats.txt
tools/: compile_c.sh  compile_c_sse4.sh  compile_c_ssse3.sh  compile_core.sh  compile_cpp.sh  compile_cpp_avx2.sh  compile_cpp_sse4.sh  compile_cpp_ssse3.sh  compile_cpp_x64v3.sh  replace_xjb.py  replace_zmij.py
xjb/: ftoa.cpp
zmij-c/: zmij.c
zmij-cpp/: zmij.cc
zmij-cpp-old/: zmij.cc  zmij.h
zmij-cpp-old2/: zmij.cc
zmij-cpp-pr/: zmij.cc
zmij-rust/: Cargo.toml
zmij-rust/src/: lib.rs
